kubernetes/services/service-cluster_ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-clusterip-service
  namespace: default
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
