kubernetes/services/service-external_name.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-external-service
  namespace: default
spec:
  type: ExternalName
  externalName: example.com
