kubernetes/services/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-headless-service
  namespace: default
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  clusterIP: None
