kubernetes/services/service-load_balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-loadbalancer-service
  namespace: default
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
