kubernetes/services/service-multiport.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-multiport-service
  namespace: default
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
    - protocol: TCP
      port: 443
      targetPort: 8443
