kubernetes/services/service-namespace.yml
apiVersion: v1
kind: Service
metadata:
  name: example-external-service
  namespace: external-namespace
spec:
  selector:
    app: external-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
